
2020-08-28  Ron Norman <rjn@inglenet.com>

	* codegen.c: Changes for UNBOUNDED OCCURS
	* typeck.c: Changes for UNBOUNDED OCCURS

2020-07-26  Edward Hart <edward.dan.hart@gmail.com>

	* config.def: added possible values for assign-clause and
	  screen-section-rules.

2020-07-19  Edward Hart <edward.dan.hart@gmail.com>

	* cobc.c, typeck.c: added support for JSON-C as JSON handler.

2020-07-17  Edward Hart <edward.dan.hart@gmail.com>

	* config.c, config.def, cobc.h, typeck.c: added dpc-in-data conf option.
	* pplex.l, ppparse.y: added corresponding SET DPC-IN-DATA directive.
	* scanner.l: add EQUALS as alias for EQUAL in conditions (bug #663).
	* typeck.c: fixed segfault with parens around condition word (bug #663).

2020-07-07  Edward Hart <edward.dan.hart@gmail.com>

	* cobc.c, scanner.l: fixed memory issues.

2020-07-05  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y, config.def: added vsam-status config option.

2020-07-03  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y (file_status_clause): only ignore VSAM status, pending proper
	  config option.
	* typeck.c: implement syntax rules for FILE STATUS (bug #656), with
	  warning for PIC 99 status (FR #333).
	* parser.y (file_control_entry): fixed bug #619: create dummy
	  current_file for invalid SELECT.
	* cobc.c (compare_prepare): fixed bug #569: stop copying into cmp_line
	  when line length exceeds CB_LINE_LENGTH.

2020-06-30  Edward Hart <edward.dan.hart@gmail.com>

	* typeck.c (validate_move): refactored.
	* typeck.c: strengthened syntax checks on (UN)STRING ... POINTER
	  (bug #488) and UNSTRING ... COUNT (bug #653).

2020-06-26  Simon Sobisch <simonsobisch@gnu.org>

	* pplex.l: allow more characters in $DISPLAY

2020-06-23  Ron Norman <rjn@inglenet.com>

	* parser.y: Changed to use common parsing for [NOT] EXCEPTION
			Added [NOT] EXCEPTION to DELETE FILE
	* codegen.c: Changes for EXCEPTION handling for DELETE FILE
	* typeck.c: Changes for EXCEPTION handling for DELETE FILE